Tue Jul 30 08:14:34 2002  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/Creator.pm:

          Added an error check for invalid inheritance syntax.

        * bin/MakeProjectCreator/modules/Driver.pm:

          Changed the progress indicator to allow for cleaner output
          when an error occurs.

        * bin/MakeProjectCreator/modules/ProjectCreator.pm:

          Remove duplicate libs, libpaths and includes when addition or
          subtraction is involved.

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Cleaned up the template to make generated Makefiles a little more
          consistent.

Tue Jul 30 06:50:26 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Dynamic_Service.cpp: Moved ACE_Dynamic_Service::instance()
	  from the .i file into the .cpp file and added a #include of
 	  "ace/Service_Object.h" to the .cpp file so the complete type of
 	  ACE_Service_Object would be available to the HP/UX C++ compiler.
  	  Thanks to Torsten Kuepper <Torsten.Kuepper@nokia.com> for
 	  reporting this.

Tue Jul 30 07:51:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
          Enabled warnings and undocument warnings to get these warnings
          into the doxygen scoreboard. When this works I will enable the
          warnings in all other .doxygen files later.

Mon Jul 29 14:47:46 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Service_Config.cpp (process_directives_i):

	  In addition to the thread-safe yyerrno variable, check the
 	  global ace_yyerrno variable when determining if errors have
 	  occurred when processing Service Configurator directives.
  	  Thanks to Doug for tracking down the problem and suggesting a
 	  fix and to Denginere <denginere@hotmail.com> for reporting this.

Mon Jul 29 17:30:27 2002  Steve Huston  <shuston@riverace.com>

        * ace/Get_Opt.h (ctor): Changed documented name of the skip_argv0