@@ -1,3 +1,10 @@
+Tue Jul 30 10:06:04 2002  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
+
+	* ace/POSIX_Proactor.cpp (delete_result_aiocb_list): Moved 
+	  the definition of size_t ai out of the for loops to avoid
+ 	  problems on older C++ compilers.  Thanks to George Varsamis
+ 	  <gv@prismtechnologies.com> for reporting this.
+
 Tue Jul 30 08:14:34 2002  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/MakeProjectCreator/modules/Creator.pm:
