@@ -1551,6 +1551,7 @@ Marvin Wolfthal <maw@weichi.com>
 Tim Bradley <bradley_t@ociweb.com>
 Denginere <denginere@hotmail.com>
 Kier Schmitt <SchmittKC@kpt.nuwc.navy.mil>
+George Varsamis <gv@prismtechnologies.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
